--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  --theme-color-1: #0963e0;
+  --theme-color-2: #02a9f7;
+  --theme-color-3: #09d5e0;
+  --theme-color-4: #0afcc5;
+}
+
+.bg-theme-1 {
+  background-color: var(--theme-color-1);
+}
+
+.bg-theme-2 {
+  background-color: var(--theme-color-2);
+}
+
+.bg-theme-3 {
+  background-color: var(--theme-color-3);
+}
+
+.bg-theme-4 {
+  background-color: var(--theme-color-4);
+}
